--- a/Lec_15/index.css
+++ b/Lec_15/index.css
@@ -14,13 +14,12 @@ h1 {
 
 div {
   width: 100vw;
+  min-height: 90vh;
   height: 100vh;
+  max-height: 110vh;
   margin: 20px auto;
   border: 2px solid #333;
   color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
   font-weight: bold;
 }
 
